Update style rules for ChatSelectionPanel component to prevent overflow

--- a/packages/frontend/src/features/ChatSelectionPanel/index.module.css
+++ b/packages/frontend/src/features/ChatSelectionPanel/index.module.css
@@ -14,6 +14,24 @@
     height: 100%;
 }
 
+.chat-list {
+    grid-area: 1 / 1 / -1 / 2;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+    list-style: none;
+
+    background-color: rgb(22, 22, 22);
+
+    min-height: 0;
+    padding: 0.6rem;
+    margin: 0rem;
+}
+
 .chat-list-title {
     color: rgba(255, 255, 255, 0.92);
     font-size: 1.6rem;
@@ -24,21 +42,6 @@
     padding: 0rem;
     margin: 0rem;
     margin-bottom: 0.6rem;
-}
-
-.chat-list {
-    grid-area: 1 / 1 / -1 / 2;
-
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-
-    list-style: none;
-
-    background-color: rgb(22, 22, 22);
-
-    padding: 0.6rem;
-    margin: 0rem;
 }
 
 .chat-panel {
